[gd_scene load_steps=3 format=4 uid="uid://dungeon_scene_001"]

[ext_resource type="Script" path="res://scripts/dungeon/dungeon_scene.gd" id="1"]
[ext_resource type="Script" path="res://scripts/ui/dungeon_hud.gd" id="2"]

[node name="DungeonScene" type="Node2D"]
script = ExtResource("1")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(320, 160)
zoom = Vector2(1, 1)

[node name="GridContainer" type="Node2D" parent="."]

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("2")

[node name="MarginContainer" type="MarginContainer" parent="HUD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopBar" type="HBoxContainer" parent="HUD/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HeartsLabel" type="Label" parent="HUD/MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
text = "Hearts: 3.0/3.0"

[node name="MovesLabel" type="Label" parent="HUD/MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
text = "Moves: 5"

[node name="FloorLabel" type="Label" parent="HUD/MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
text = "Floor: 1/4"

[node name="KillsLabel" type="Label" parent="HUD/MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
text = "Kills: 0/3"

[node name="InventoryBar" type="HBoxContainer" parent="HUD/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BattleOverlay" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="BattleOverlay"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="BattleOverlay"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BattleOverlay/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="EnemyInfo" type="Label" parent="BattleOverlay/Panel/VBoxContainer"]
layout_mode = 2
text = "Enemy: Slime (HP: 1)"

[node name="QuestionLabel" type="Label" parent="BattleOverlay/Panel/VBoxContainer"]
layout_mode = 2
text = "Question goes here..."
autowrap_mode = 3

[node name="ChoiceContainer" type="VBoxContainer" parent="BattleOverlay/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AnswerInput" type="LineEdit" parent="BattleOverlay/Panel/VBoxContainer"]
visible = false
layout_mode = 2
placeholder_text = "Enter your answer..."

[node name="SubmitButton" type="Button" parent="BattleOverlay/Panel/VBoxContainer"]
layout_mode = 2
text = "Submit"

[node name="BottomBar" type="HBoxContainer" parent="BattleOverlay/Panel/VBoxContainer"]
layout_mode = 2

[node name="CalculatorButton" type="Button" parent="BattleOverlay/Panel/VBoxContainer/BottomBar"]
layout_mode = 2
text = "Calculator"

[node name="ScrollButton" type="Button" parent="BattleOverlay/Panel/VBoxContainer/BottomBar"]
layout_mode = 2
text = "Use Scroll"

[node name="HintButton" type="Button" parent="BattleOverlay/Panel/VBoxContainer/BottomBar"]
layout_mode = 2
text = "Hint"
